# Patent-Paper-Pair

./: README.md  pyproject.toml
notebooks/: matching.ipynb  ml_model.ipynb
src/: openalex_db.py  scores.py
